--- a/css/main.css
+++ b/css/main.css
@@ -4,22 +4,6 @@ body{
 *{
 	box-sizing: border-box;
 }
-.section{
-	color:white;
-}
-#avatar{
-	width: 200px;
-	height: 200px;
-	border: 10px solid #22c3aa;
-	border-radius: 100px;
-}
-#title{
-	margin: 0.25em 0 0 0;
-}
-#subtitle{
-	margin: 1em 0 0.25em 0;
-	color: #aee2d9;
-}
 h1{
 	text-shadow: 2px 3px #000000;
 	font-size: 3.5em;
@@ -40,6 +24,47 @@ a{
 a:hover{
 	color:#9f3;
 }
+
+/*main page*/
 .center{
 	text-align: center;
 }
+.section{
+	color:white;
+}
+#avatar{
+	width: 200px;
+	height: 200px;
+	border: 10px solid #22c3aa;
+	border-radius: 100px;
+}
+#title{
+	margin: 0.25em 0 0 0;
+}
+#subtitle{
+	margin: 1em 0 0.25em 0;
+	color: #aee2d9;
+}
+
+/*background pape*/
+.background-content{
+	display: flex;
+	max-width: 743px;
+	margin: auto;
+}
+.background-item{
+	flex: 1;
+}
+.item-1 h4{
+	color: #FFCC00;
+}
+/*.item-1 h3{
+	color:#FFCC00;
+}*/
+.item-2 h4{
+	color: #CC0033;
+}
+/*.item-2 h3{
+	color: #CC0033;
+}*/
+
